[tool.poetry]
name = "sdesk"
version = "0.2.1"
description = "ScienceDesk helper library"
authors = ["ScienceDesk GmbH <github@sciencedesk.net>"]
readme = "README.md"

homepage = "https://sciencedesk.net"
repository = "https://github.com/ScienceDesk/sdesk-python"
documentation = "https://github.com/ScienceDesk/sdesk-python"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^19.10b0", python = "^3.6" }
pre-commit = {version = "^2.3.0", python = "^3.6.1" }


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
