[tool.poetry]
name = "sdesk"
version = "0.2.2+rc.1"
description = "ScienceDesk helper library"
authors = ["ScienceDesk GmbH <github@sciencedesk.net>"]
readme = "README.md"

homepage = "https://sciencedesk.net"
repository = "https://github.com/ScienceDesk/sdesk-python"
documentation = "https://github.com/ScienceDesk/sdesk-python"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = {version = "^2.3.0", python = "^3.6.1" }
pylint = "^2.5.0"
tox = "^3.14.6"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
