[tool.poetry]
name = "sdesk"
version = "0.2.2"
description = "ScienceDesk helper library"
authors = ["ScienceDesk GmbH <github@sciencedesk.net>"]
readme = "README.md"

homepage = "https://sciencedesk.net"
repository = "https://github.com/ScienceDesk/sdesk-python"
documentation = "https://sciencedesk-helper-library.readthedocs.io/en/latest/"

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
requests_toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = {version = "^2.4.0", python = "^3.6.1"}
pylint = "^2.5.0"
tox = "^3.14.6"
sphinx = "^3.0.3"
sphinxcontrib-apidoc = "^0.3.0"
sphinx_rtd_theme = "^0.4.3"

[tool.poetry.scripts]
published = 'sdesk:published'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
